@@ -9,6 +9,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors; // <--- IMPORT REQUERIDO
 
 /**
  * Servicio para gestión de Promociones.
@@ -44,12 +45,15 @@ public class PromocionService {
      */
     @Transactional(readOnly = true)
     public List<Promocion> obtenerActivas() {
+        LocalDate hoy = LocalDate.now();
         return promocionRepository.findAll().stream()
-                .filter(p -> p.getEstado() != null && p.getEstado().equals("activa") &&
-                           p.getFechaInicio() != null && p.getFechaFin() != null &&
-                           !LocalDate.now().isBefore(p.getFechaInicio()) &&
-                           !LocalDate.now().isAfter(p.getFechaFin()))
-                .toList();
+                // CORREGIDO: Comparar Enum con Enum
+                .filter(p -> p.getEstado() != null && p.getEstado() == Promocion.Estado.activa &&
+                        p.getFechaInicio() != null && p.getFechaFin() != null &&
+                        !hoy.isBefore(p.getFechaInicio()) &&
+                        !hoy.isAfter(p.getFechaFin()))
+                // CORREGIDO: Compatible con Java 8
+                .collect(Collectors.toList());
     }
 
     /**
@@ -59,24 +63,25 @@ public class PromocionService {
         if (promocion == null) {
             throw new IllegalArgumentException("La promoción no puede ser nula");
         }
-        
+
         if (promocion.getNombre() == null || promocion.getNombre().trim().isEmpty()) {
             throw new IllegalArgumentException("El nombre de la promoción es requerido");
         }
-        
+
         if (promocion.getFechaInicio() == null || promocion.getFechaFin() == null) {
             throw new IllegalArgumentException("Las fechas de inicio y fin son requeridas");
         }
-        
+
         if (promocion.getFechaInicio().isAfter(promocion.getFechaFin())) {
             throw new IllegalArgumentException("La fecha de inicio no puede ser posterior a la fecha de fin");
         }
-        
-        // Establecer estado por defecto si no está definido
-        if (promocion.getEstado() == null || promocion.getEstado().isEmpty()) {
-            promocion.setEstado("activa");
+
+        // CORREGIDO: Chequear si es null
+        if (promocion.getEstado() == null) {
+            // CORREGIDO: Asignar el Enum, no un String
+            promocion.setEstado(Promocion.Estado.activa);
         }
-        
+
         return promocionRepository.save(promocion);
     }
 
@@ -87,29 +92,30 @@ public class PromocionService {
         if (idPromocion == null || idPromocion <= 0) {
             throw new IllegalArgumentException("ID de promoción inválido");
         }
-        
+
         Promocion promocionExistente = promocionRepository.findById(idPromocion)
                 .orElseThrow(() -> new IllegalArgumentException("Promoción no encontrada con ID: " + idPromocion));
-        
+
         if (promocionActualizada.getNombre() != null && !promocionActualizada.getNombre().trim().isEmpty()) {
             promocionExistente.setNombre(promocionActualizada.getNombre());
         }
-        
+
         if (promocionActualizada.getDescripcion() != null) {
             promocionExistente.setDescripcion(promocionActualizada.getDescripcion());
         }
-        
+
         if (promocionActualizada.getFechaInicio() != null && promocionActualizada.getFechaFin() != null) {
             if (!promocionActualizada.getFechaInicio().isAfter(promocionActualizada.getFechaFin())) {
                 promocionExistente.setFechaInicio(promocionActualizada.getFechaInicio());
                 promocionExistente.setFechaFin(promocionActualizada.getFechaFin());
             }
         }
-        
-        if (promocionActualizada.getEstado() != null && !promocionActualizada.getEstado().isEmpty()) {
+
+        // CORREGIDO: Chequear si no es null
+        if (promocionActualizada.getEstado() != null) {
             promocionExistente.setEstado(promocionActualizada.getEstado());
         }
-        
+
         return promocionRepository.save(promocionExistente);
     }
 
@@ -120,11 +126,11 @@ public class PromocionService {
         if (idPromocion == null || idPromocion <= 0) {
             throw new IllegalArgumentException("ID de promoción inválido");
         }
-        
+
         if (!promocionRepository.existsById(idPromocion)) {
             throw new IllegalArgumentException("Promoción no encontrada con ID: " + idPromocion);
         }
-        
+
         promocionRepository.deleteById(idPromocion);
     }
 
@@ -135,11 +141,12 @@ public class PromocionService {
         if (idPromocion == null || idPromocion <= 0) {
             throw new IllegalArgumentException("ID de promoción inválido");
         }
-        
+
         Promocion promocion = promocionRepository.findById(idPromocion)
                 .orElseThrow(() -> new IllegalArgumentException("Promoción no encontrada con ID: " + idPromocion));
-        
-        promocion.setEstado("activa");
+
+        // CORREGIDO: Asignar el Enum, no un String
+        promocion.setEstado(Promocion.Estado.activa);
         return promocionRepository.save(promocion);
     }
 
@@ -150,11 +157,12 @@ public class PromocionService {
         if (idPromocion == null || idPromocion <= 0) {
             throw new IllegalArgumentException("ID de promoción inválido");
         }
-        
+
         Promocion promocion = promocionRepository.findById(idPromocion)
                 .orElseThrow(() -> new IllegalArgumentException("Promoción no encontrada con ID: " + idPromocion));
-        
-        promocion.setEstado("inactiva");
+
+        // CORREGIDO: Asignar el Enum, no un String
+        promocion.setEstado(Promocion.Estado.inactiva);
         return promocionRepository.save(promocion);
     }
 
@@ -166,19 +174,21 @@ public class PromocionService {
         if (idPromocion == null || idPromocion <= 0) {
             throw new IllegalArgumentException("ID de promoción inválido");
         }
-        
+
         Optional<Promocion> promocion = promocionRepository.findById(idPromocion);
-        
-        if (promocion.isEmpty()) {
+
+        // CORREGIDO: Usar !promocion.isPresent() para Java 8
+        if (!promocion.isPresent()) {
             return false;
         }
-        
+
         Promocion p = promocion.get();
         LocalDate hoy = LocalDate.now();
-        
-        return p.getEstado() != null && p.getEstado().equals("activa") &&
-               p.getFechaInicio() != null && p.getFechaFin() != null &&
-               !hoy.isBefore(p.getFechaInicio()) &&
-               !hoy.isAfter(p.getFechaFin());
+
+        // CORREGIDO: Comparar Enum con Enum
+        return p.getEstado() != null && p.getEstado() == Promocion.Estado.activa &&
+                p.getFechaInicio() != null && p.getFechaFin() != null &&
+                !hoy.isBefore(p.getFechaInicio()) &&
+                !hoy.isAfter(p.getFechaFin());
     }
 }
